[package]
name = "soar-cpi"
version = "0.1.3"
edition = "2021"
include = ["src/**/*", "idl.json"]
description = "CPI helpers for the SOAR program"
authors = ["Magicblock <dev@magicblock.gg>"]
repository = "https://github.com/magicblock-labs/SOAR/tree/main/crates/soar-cpi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
clockwork-anchor-gen = "0.3.2"
anchor-lang = "0.29.0"
