[package]
name = "soar"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
mpl-token-metadata = { version="1.13.2", features = ["no-entrypoint"] }
winnow = "=0.5.15"
solana-security-txt = "1.1.1"
